--- a/package.json
+++ b/package.json
@@ -1,24 +1,35 @@
 {
   "name": "triptune-frontend",
+  "homepage": "https://triptune.netlify.app/",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write .",
+    "typecheck": "tsc --noEmit -p ./tsconfig.json",
+    "test": "jest"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "jest": "^29.7.0",
+    "js-cookie": "^3.0.5",
+    "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.4"
+    "react-ga4": "^2.1.0",
+    "react-hook-form": "^7.52.0",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.4"
+    "eslint-config-next": "14.2.4",
+    "typescript": "^5"
   }
 }
