--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.21",
+    "@types/styled-components": "^5.1.34",
     "axios": "^1.7.2",
+    "babel-plugin-styled-components": "^2.1.4",
     "jest": "^29.7.0",
     "js-cookie": "^3.0.5",
     "next": "14.2.4",
@@ -21,7 +26,8 @@
     "react-dom": "^18",
     "react-ga4": "^2.1.0",
     "react-hook-form": "^7.52.0",
-    "sharp": "^0.33.4"
+    "sharp": "^0.33.4",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
