--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@mui/material": "^5.15.21",
+    "@mui/material": "^5.16.0",
     "@types/styled-components": "^5.1.34",
     "axios": "^1.7.2",
     "babel-plugin-styled-components": "^2.1.4",
+    "crypto-js": "^4.2.0",
     "jest": "^29.7.0",
     "js-cookie": "^3.0.5",
     "next": "14.2.4",
@@ -26,6 +27,7 @@
     "react-dom": "^18",
     "react-ga4": "^2.1.0",
     "react-hook-form": "^7.52.0",
+    "react-router-dom": "^6.24.1",
     "sharp": "^0.33.4",
     "styled-components": "^6.1.11"
   },
