--- a/package.json
+++ b/package.json
@@ -29,13 +29,15 @@
     "react-hook-form": "^7.52.0",
     "react-router-dom": "^6.24.1",
     "sharp": "^0.33.4",
-    "styled-components": "^6.1.11"
+    "styled-components": "^6.1.11",
+    "swiper": "^11.1.4"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/swiper": "^6.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "typescript": "^5"
