--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.7.2",
     "babel-plugin-styled-components": "^2.1.4",
     "crypto-js": "^4.2.0",
+    "install": "^0.13.0",
     "jest": "^29.7.0",
     "js-cookie": "^3.0.5",
     "next": "14.2.4",
@@ -29,8 +30,8 @@
     "react-hook-form": "^7.52.0",
     "react-router-dom": "^6.24.1",
     "sharp": "^0.33.4",
-    "styled-components": "^6.1.11",
-    "swiper": "^11.1.4"
+    "styled-components": "^6.1.12",
+    "swiper": "^11.1.7"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
