--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.16.0",
+    "@react-google-maps/api": "^2.19.3",
     "@types/styled-components": "^5.1.34",
     "axios": "^1.7.4",
     "babel-plugin-styled-components": "^2.1.4",
@@ -24,8 +25,8 @@
     "jest": "^29.7.0",
     "js-cookie": "^3.0.5",
     "next": "14.2.4",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-ga4": "^2.1.0",
     "react-hook-form": "^7.52.0",
     "react-router-dom": "^6.24.1",
@@ -35,12 +36,12 @@
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/node": "^22.5.0",
+    "@types/react": "^18.3.4",
     "@types/react-dom": "^18",
     "@types/swiper": "^6.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
-    "typescript": "^5"
+    "typescript": "^5.5.4"
   }
 }
