--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/swiper": "^6.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
+    "prettier": "^3.3.3",
     "typescript": "^5.5.4"
   }
 }
