--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "swiper": "^11.1.7"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.5.0",
     "@types/react": "^18.3.4",
