--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,10 @@
     ],
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "typeRoots": [
+      "node_modules/@types"
+    ]
   },
   "include": [
     "next-env.d.ts",
