--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@mui/material": "^5.16.0",
     "@react-google-maps/api": "^2.19.3",
     "@types/styled-components": "^5.1.34",
-    "axios": "^1.7.4",
+    "axios": "^1.7.7",
     "babel-plugin-styled-components": "^2.1.4",
     "crypto-js": "^4.2.0",
     "install": "^0.13.0",
@@ -30,11 +30,12 @@
     "react-ga4": "^2.1.0",
     "react-hook-form": "^7.52.0",
     "react-router-dom": "^6.24.1",
-    "sharp": "^0.33.4",
+    "sharp": "^0.33.5",
     "styled-components": "^6.1.12",
     "swiper": "^11.1.7"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.5.0",
     "@types/react": "^18.3.4",
