--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.16.0",
     "@react-google-maps/api": "^2.19.3",
+    "@tanstack/react-query": "^5.53.3",
     "@types/styled-components": "^5.1.34",
     "axios": "^1.7.7",
     "babel-plugin-styled-components": "^2.1.4",
@@ -32,7 +33,8 @@
     "react-router-dom": "^6.24.1",
     "sharp": "^0.33.5",
     "styled-components": "^6.1.12",
-    "swiper": "^11.1.7"
+    "swiper": "^11.1.7",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
