--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^6.0.2",
     "@mui/material": "^5.16.0",
     "@react-google-maps/api": "^2.19.3",
     "@tanstack/react-query": "^5.53.3",
