--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,9 +20,7 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "typeRoots": [
-      "node_modules/@types"
-    ]
+    "typeRoots": ["node_modules/@types"]
   },
   "include": [
     "next-env.d.ts",
