--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.3.1",
     "react-ga4": "^2.1.0",
     "react-hook-form": "^7.52.0",
+    "sharp": "^0.33.5",
     "styled-components": "^6.1.12",
     "swiper": "^11.1.7",
     "zustand": "^4.5.5"
