[24-09-13] 프록시 실험 4

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "triptune-frontend",
-  "homepage": "https://triptune.netlify.app/",
+  "homepage": "https://triptune.netlify.app",
   "version": "0.1.0",
   "private": true,
+  "proxy" : "http://13.209.177.247:8080",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
