[24-09-13] 동기화 진행 중

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "homepage": "https://triptune.netlify.app/",
   "version": "0.1.0",
   "private": true,
+  "proxy" : "http://13.209.177.247:8080",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
