--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@react-google-maps/api": "^2.19.3",
     "@tanstack/react-query": "^5.53.3",
     "@types/styled-components": "^5.1.34",
+    "date-fns": "^4.1.0",
     "jest": "^29.7.0",
     "js-cookie": "^3.0.5",
     "next": "14.2.4",
     "react": "^18.3.1",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-ga4": "^2.1.0",
     "react-hook-form": "^7.52.0",
