--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@tanstack/react-query": "^5.53.3",
     "@types/styled-components": "^5.1.34",
     "date-fns": "^4.1.0",
+    "install": "^0.13.0",
     "jest": "^29.7.0",
     "js-cookie": "^3.0.5",
     "next": "14.2.10",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-ga4": "^2.1.0",
