--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tanstack/react-query": "^5.53.3",
     "@types/styled-components": "^5.1.34",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "install": "^0.13.0",
     "jest": "^29.7.0",
     "js-cookie": "^3.0.5",
@@ -28,9 +29,12 @@
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-datepicker": "^7.3.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-ga4": "^2.1.0",
     "react-hook-form": "^7.52.0",
+    "react-intersection-observer": "^9.13.1",
     "sharp": "^0.33.5",
     "styled-components": "^6.1.12",
     "swiper": "^11.1.7",
