--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@mui/icons-material": "^6.0.2",
     "@mui/material": "^5.16.0",
     "@react-google-maps/api": "^2.19.3",
+    "@stomp/stompjs": "^7.0.0",
     "@tanstack/react-query": "^5.53.3",
+    "@types/sockjs-client": "^1.5.4",
     "@types/styled-components": "^5.1.34",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
@@ -36,6 +38,7 @@
     "react-hook-form": "^7.52.0",
     "react-intersection-observer": "^9.13.1",
     "sharp": "^0.33.5",
+    "sockjs-client": "^1.6.1",
     "styled-components": "^6.1.12",
     "swiper": "^11.1.7",
     "zustand": "^4.5.5"
