--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [[redirects]]
-from = "/ws"
-to = "wss://13.209.177.247:8080/ws"
+from = "/wss"
+to = "ws://13.209.177.247:8080/ws"
 status = 200
 force = true
