메타 태그의 URL 수정

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "triptune-frontend",
-  "homepage": "https://triptune.netlify.app",
+  "homepage": "https://www.triptune.site",
   "version": "0.1.0",
   "private": true,
   "scripts": {
