--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write .",
-    "typecheck": "tsc --noEmit -p ./tsconfig.json",
-    "test": "jest"
+    "typecheck": "tsc --noEmit -p ./tsconfig.json"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -25,9 +24,8 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "install": "^0.13.0",
-    "jest": "^29.7.0",
     "js-cookie": "^3.0.5",
-    "next": "14.2.21",
+    "next": "15.1.4",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-datepicker": "^7.3.0",
@@ -46,6 +44,7 @@
   "devDependencies": {
     "@netlify/plugin-nextjs": "^5.8.1",
     "@types/js-cookie": "^3.0.6",
+    "@types/node": "22.10.5",
     "@types/react": "^18.3.4",
     "@types/swiper": "^6.0.0",
     "eslint": "^8",
