--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "local": "next dev -p 5814",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
