--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "typeRoots": ["node_modules/@types"],
+    "typeRoots": ["node_modules/@types", "node_modules/cypress/types"],
     "target": "ES2017"
   },
   "include": [
@@ -29,7 +29,9 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "src/**/*.ts",
-    "src/**/*.tsx"
+    "src/**/*.tsx",
+    "cypress/**/*.ts",
+    "cypress/**/*.tsx"
   ],
   "exclude": ["node_modules"]
 }
