다르게 포커싱 하는 중

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "homepage": "https://www.triptune.site",
   "version": "0.1.0",
   "private": true,
+  "license": "UNLICENSED",
   "scripts": {
     "dev": "next dev",
     "local": "next dev -p 5814",
