--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write .",
-    "typecheck": "tsc --noEmit -p ./tsconfig.json"
+    "typecheck": "tsc --noEmit -p ./tsconfig.json",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
+    "test:e2e": "cypress run",
+    "test:e2e:dev": "cypress open"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -44,13 +51,24 @@
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^5.8.1",
+    "@testing-library/cypress": "^10.0.3",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^29.5.14",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "22.10.5",
     "@types/react": "^18.3.4",
     "@types/swiper": "^6.0.0",
+    "cypress": "^14.3.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "msw": "^2.7.5",
     "prettier": "^3.3.3",
+    "start-server-and-test": "^2.0.11",
+    "ts-jest": "^29.3.2",
     "typescript": "^5.5.4"
   }
 }
