--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
     "test:e2e": "cypress run",
-    "test:e2e:dev": "cypress open"
+    "test:e2e:dev": "cypress open",
+    "optimize-images": "node scripts/optimize-images.js"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
