Head 태그 제거 및 메타데이터 정의 파일 추가

--- a/netlify.toml
+++ b/netlify.toml
@@ -5,6 +5,10 @@
   command = "npm run build"
   publish = ".next"
 
+# Next.js 플러그인 설정 (빌드 전에 위치)
+[[plugins]]
+  package = "@netlify/plugin-nextjs"
+
 # 보안 헤더 설정
 [[headers]]
   for = "/*"
@@ -121,7 +125,3 @@
 [context.deploy-preview]
   [context.deploy-preview.environment]
     NODE_ENV = "development"
-
-# Next.js 플러그인 설정
-[[plugins]]
-  package = "@netlify/plugin-nextjs"
