--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,9 @@
         "name": "next"
       }
     ],
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["src/*"]
     },
     "typeRoots": ["node_modules/@types", "node_modules/cypress/types"],
     "target": "ES2017"
